kubernetes/ingress/cloudcart-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: cloudcart-ingress
  namespace: cloudcart

spec:
  ingressClassName: nginx

  rules:
    - host: cloudcart.local
      http:
        paths:

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 5000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
